# tar-diff

./: README.md  package.json  setup.cfg  setup.py
scripts/: tar-diff
