# https://pypi.org/project/setupcfg-generator/
[metadata]
name = tar-diff
version = 2019.4.13
url = https://github.com/looking-for-a-job/tar-diff
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tar diff

[options]
install_requires = 
	setuptools
scripts = 
	scripts/tar-diff
